--- a/styles.css
+++ b/styles.css
@@ -4,3 +4,9 @@ body{
 h1{
     background-color:  red;
 }
+h2{
+    background-color: orange;
+    font-family: 'Courier New', Courier, monospace;
+    color: orchid;
+    font-size: 65px;
+}
